--- a/package.json
+++ b/package.json
@@ -7,11 +7,18 @@
     "start": "astro dev",
     "build": "astro build",
     "preview": "astro preview",
-    "astro": "astro"
+    "astro": "astro",
+    "sc": "sense-commits"
   },
   "dependencies": {
-    "@astrojs/tailwind": "^3.1.0",
-    "astro": "^2.1.2",
-    "tailwindcss": "^3.2.7"
+    "@astrojs/svelte": "^2.1.0",
+    "@astrojs/tailwind": "3.1.0",
+    "astro": "^2.1.3",
+    "motion": "10.15.5",
+    "svelte": "^3.56.0",
+    "tailwindcss": "3.2.7"
+  },
+  "devDependencies": {
+    "sense-commits": "1.0.0"
   }
 }
