--- a/package.json
+++ b/package.json
@@ -11,9 +11,9 @@
     "sc": "sense-commits"
   },
   "dependencies": {
-    "@astrojs/svelte": "^2.1.0",
+    "@astrojs/svelte": "2.1.0",
     "@astrojs/tailwind": "3.1.0",
-    "astro": "^2.1.3",
+    "astro": "2.1.3",
     "motion": "10.15.5",
     "svelte": "^3.56.0",
     "tailwindcss": "3.2.7"
